# r_space_shooter

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/config/: display.ron
src/: main.rs
