[package]
name = "r_space_shooter"
version = "0.1.0"
authors = ["CorneliusCornbread"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.14.0"

[features]
default = ["vulkan"]

empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]